Implement basic Box2D demo, featuring a bouncing sprite

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
+# Library files
+lib/
+!lib/.gitkeep
+
 *~
 *.autosave
 *.a
